src/index.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  
  color-scheme: light dark;
  background-color: black;
  color: rgba(255, 255, 255, 0.87);
}

* { 
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  background-color: #2c2d48;
  min-height: 100vh;
}

.app {
  position: relative;
  background-color: #2c2d48;
  color: white;
}

.sidebar {
  position: relative;
  background-color: #181a2d;
  height: 100vh;
  width: 20%;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.sidebar-content {
  height: 78%;
}

.app-content{
  position: relative;
  background-color: #1e2036;
  width: 80%;
  height: 100%;
  padding: 2rem;
  overflow-y: auto;
}

.container {
  display: flex;
}

.logo {
  display: flex;
  justify-content: center;
  padding: 10%;
}

.logo img {
  object-fit: contain;
  width: 100%;
  height: 100%;
}

.credits {
  position: absolute;
  bottom: 0;
  width: 100%;
}

.credits-container {
  display: flex;
  justify-content: center;
  padding: 2rem;
  color: #5d5f82
}

.map-grid {
  display: flexbox;
  width: 100%;
  height: 100%;
}

.map-card {
  margin: 20px;
}

